--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,13 @@
 # --- DATABASE CONFIG ---
-# Hostnya 'db_service' sesuai nama service di docker-compose
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+# Hostnya menggunakan nama service docker (Rule No Localhost)
+DB_HOST=db_C6
+DB_USER=user_flow
+DB_PASS=password123
+DB_NAME=flowfinance_db
 
 # --- APP CONFIG ---
-# Identitas Kelompok (Biar container namenya unik)
-# Contoh: A1, B2, C3, dst.
-GROUP_NAME=
+# Identitas Kelompok C6
+GROUP_NAME=C6
 
-# Jatah Port Server (Sesuai tabel pembagian)
-# Contoh: 2581, 2582, dst.
-APP_PORT=
+# Jatah Port Server (Sesuai Proposal Page 4: Port 2583)
+APP_PORT=2583
