--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,2 +1,10 @@
-# import image node versi 18 alpine
-FROM node:18-alpine
+FROM node:18
+
+WORKDIR /app
+COPY app/package*.json ./
+RUN npm install
+
+COPY app/ .
+EXPOSE 3000
+
+CMD ["node", "app.js"]
