--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: "3.8"
-
 services:
   # --- 1. DATABASE SERVICE ---
   db_service:
     image: mysql:8.0
+    # Nama container akan menjadi: db_C6
     container_name: db_${GROUP_NAME}
     restart: always
     environment:
@@ -11,17 +10,24 @@ services:
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASS}
       MYSQL_ROOT_PASSWORD: rootpassword
-    # volumes
-    # Network
+    volumes:
+      # PENTING: Persistence Data (Agar data tidak hilang saat restart)
+      - db_data:/var/lib/mysql
+      # Script init.sql akan dijalankan otomatis saat pertama kali build
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - flowfinance_net
 
   # --- 2. APP SERVICE ---
   app_service:
     build: ./app
+    # Nama container akan menjadi: app_C6
     container_name: app_${GROUP_NAME}
     restart: always
     expose:
       - "3000"
     environment:
+      # Koneksi ke DB menggunakan nama service "db_service" (Service Discovery)
       - DB_HOST=db_service
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
@@ -29,7 +35,8 @@ services:
       - APP_PORT=3000
     depends_on:
       - db_service
-    # Network
+    networks:
+      - flowfinance_net
 
   # --- 3. NGINX SERVICE ---
   nginx_service:
@@ -37,11 +44,20 @@ services:
     container_name: nginx_${GROUP_NAME}
     restart: always
     ports:
+      # Mapping Port dari .env (2583) ke port internal Nginx (80)
       - "${APP_PORT}:80"
     depends_on:
       - app_service
-    # Network
-    # volumes
+    volumes:
+      # Load konfigurasi Nginx kita
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - flowfinance_net
 
 #--- VOLUMES AND NETWORKS ---
-# tambahkan bagian volumes dan networks di sini
+volumes:
+  db_data: # Volume untuk menyimpan data MySQL
+
+networks:
+  flowfinance_net:
+    driver: bridge
