--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,1 +1,15 @@
 # TODO: Konfigurasi Nginx di sini untuk meneruskan request (Proxy Pass) ke container App kalian
+server {
+    listen 80;
+    server_name localhost;
+
+    location / {
+        # Mengarah ke container app_C6 sesuai GROUP_NAME di .env
+        proxy_pass http://app_C6:3000;
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
