--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   # --- 1. DATABASE SERVICE ---
   db_service:
     image: mysql:8.0
-    # Nama container akan menjadi: db_C6
     container_name: db_${GROUP_NAME}
     restart: always
     environment:
@@ -13,23 +12,19 @@ services:
       MYSQL_PASSWORD: ${DB_PASS}
       MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
-      # PENTING: Persistence Data (Agar data tidak hilang saat restart)
       - db_data:/var/lib/mysql
-      # Script init.sql akan dijalankan otomatis saat pertama kali build
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - flowfinance_net
+      - tekser-network
 
   # --- 2. APP SERVICE ---
   app_service:
     build: ./app
-    # Nama container akan menjadi: app_C6
     container_name: app_${GROUP_NAME}
     restart: always
     expose:
       - "3000"
     environment:
-      # Koneksi ke DB menggunakan nama service "db_service" (Service Discovery)
       - DB_HOST=db_service
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
@@ -38,7 +33,7 @@ services:
     depends_on:
       - db_service
     networks:
-      - flowfinance_net
+      - tekser-network
 
   # --- 3. NGINX SERVICE ---
   nginx_service:
@@ -46,20 +41,22 @@ services:
     container_name: nginx_${GROUP_NAME}
     restart: always
     ports:
-      # Mapping Port dari .env (2583) ke port internal Nginx (80)
+      - "80:80"
       - "${APP_PORT}:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app_service
-    volumes:
-      # Load konfigurasi Nginx kita
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - flowfinance_net
+      - tekser-network
 
 #--- VOLUMES AND NETWORKS ---
 volumes:
-  db_data: # Volume untuk menyimpan data MySQL
+  db_data:
+    name: mysql_data_${GROUP_NAME}
+    driver: local
 
 networks:
-  flowfinance_net:
+  tekser-network:
     driver: bridge
+    name: net_tekser_${GROUP_NAME}
